Build runs successfully: Updated (EXECUTABLE_NAME) TO (PRODUCT_MODULE_NAME) in info.plist

--- a/mapbox-example/Info.plist
+++ b/mapbox-example/Info.plist
@@ -31,7 +31,7 @@
 					<key>UISceneConfigurationName</key>
 					<string>ExampleAppConfiguration</string>
 					<key>UISceneDelegateClassName</key>
-					<string>$(EXECUTABLE_NAME).SceneDelegate</string>
+					<string>$(PRODUCT_MODULE_NAME).AppDelegate</string>
 					<key>UISceneStoryboardFile</key>
 					<string>Main</string>
 				</dict>
